changes to look cleaner

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -1,11 +1,12 @@
-<div id="weather">
-{hourly.summary}
+<div class="weather">
+
+<!-- <h6>{summary}</h6> -->
 
 <!-- {hourly.data} -->
 
-{currently.temperature}
+<!-- {currently.temperature} -->
 
 
-{currently.summary}
+<!-- {currently.summary} -->
 
 </div>
